--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://bert030395.github.io/my-expensescalc",
   "name": "frontend",
   "private": true,
   "version": "0.0.0",
@@ -27,5 +28,9 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^5.0.0",
     "vite": "^4.3.2"
-  }
+  },
+  "main": "vite.config.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
